src/objects/CventEvents__NominationApprover__c.object
<CustomObject>
    <fields>
        <fullName>CventEvents__Comment__c</fullName>
        <description>Stores the comment leaved by approver.</description>
        <inlineHelpText>Stores the comment leaved by approver.</inlineHelpText>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__GroupId__c</fullName>
        <description>Stores the approving Public Group Id.</description>
        <inlineHelpText>Stores the approving Public Group Id.</inlineHelpText>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__GroupName__c</fullName>
        <description>Stores the approving Public Group Name.</description>
        <inlineHelpText>Stores the approving Public Group Name.</inlineHelpText>
        <label>Group Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsSingleApproveSufficient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the single approve sufficient for the entire level in case of approver is public group.</description>
        <inlineHelpText>Indicates whether the single approve sufficient for the entire level in case of approver is public group.</inlineHelpText>
        <label>Is Single Approve Sufficient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__Level__c</fullName>
        <description>Indicates the nomination level of the approver.</description>
        <inlineHelpText>Indicates the nomination level of the approver.</inlineHelpText>
        <label>Level</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__Nomination__c</fullName>
        <description>Stores the nomination the approver is assigned to.</description>
        <inlineHelpText>Stores the nomination the approver is assigned to.</inlineHelpText>
        <label>Nomination</label>
        <referenceTo>CventEvents__Nomination__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>NominationApprovers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CventEvents__ParentApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the parent group-type approver in case this approver is a group member.</description>
        <inlineHelpText>Stores the parent group-type approver in case this approver is a group member.</inlineHelpText>
        <label>Parent Approver</label>
        <referenceTo>CventEvents__NominationApprover__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>ChildApprovers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__ProcessedDate__c</fullName>
        <description>Stores date when the nomination has been processed by this approver.</description>
        <inlineHelpText>Stores date when the nomination has been processed by this approver.</inlineHelpText>
        <label>Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__Status__c</fullName>
        <description>Indicates the approval status.</description>
        <inlineHelpText>Indicates the approval status.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In queue</fullName>
                    <default>true</default>
                    <label>In queue</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the approving User.</description>
        <inlineHelpText>Stores the approving User.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NominationApprovers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Nomination Approver</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__Nomination__c</columns>
        <columns>CventEvents__Status__c</columns>
        <columns>CventEvents__Level__c</columns>
        <columns>CventEvents__User__c</columns>
        <columns>CventEvents__GroupName__c</columns>
        <columns>CventEvents__ProcessedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NA-{00000000}</displayFormat>
        <label>Nomination Approver Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nomination Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>